# example

./: .gitignore  build_and_push.sh  config.yaml  dev.docker-compose.yaml  docker-compose.yaml  readme.md
.github/workflows/: docker_build.yaml  pipeline_build.yaml
backend/: .air.toml  Dockerfile.backend  Makefile  config.yaml  go.mod  go.sum  todo.md
backend/cmd/: main.go
backend/internal/auth/: config.go  constants.go
backend/internal/dashboard/: errors.go
backend/internal/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/server/: config.go  server.go
backend/pkg/db/: dashboard.sql.go  models.go  users.sql.go
backend/pkg/postgres/: config.go  postgres.go
backend/static/: index.html  sw.js
backend/static/assets/: _doctor-CqNm-Hv2.js  _id-39IrIxo6.js  about.lazy-CF18d8E2.js  about.lazy-D8c5StIa.js  about.lazy-DgMvLndT.js  about.lazy-KJvBsqqu.js  about.lazy-p-yzxD7O.js  index-BH8_8P9k.css  index-BfIwXERV.css  index-Bz_Wo-2Z.js  index-CY-qtDUc.css  index-CYmPb6FV.css  index-CqNmaO7F.css  index-CvBkMtbG.js  (+14 more)
etl/: parser.ipynb
minio/: config.json
rag/: Dockerfile  pyproject.toml
rag/src/: .env  api.py  build.py  chat.py  graph.py  main.py  models.py
rag/src/nodes/: __init__.py  data_source.py  llm.py  pipeline.py  record.py  splitter.py  vector_store.py
rag/src/templates/: chat.html  item.html
ui/: TODO.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/hooks/: useStores.tsx
ui/src/: App.tsx  auth.ts  main.tsx  routeTree.gen.ts
widget/: package.json  pnpm-lock.yaml
widget/src/: App.tsx
(+80 files in other folders)
