[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["EgorTarasov <61450170+EgorTarasov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
langchain-core = "^0.3.21"
langchain-postgres = "^0.0.12"
langchain-huggingface = "^0.1.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
